[gd_scene load_steps=11 format=3 uid="uid://dpyqweqtlpsrb"]

[ext_resource type="Script" path="res://scripts/menu/title.gd" id="1_jkxbs"]
[ext_resource type="Shader" path="res://assets/shaders/scroll.gdshader" id="2_5r50l"]
[ext_resource type="Texture2D" uid="uid://ds50t3otvw1j" path="res://assets/titles/pattern.png" id="3_mh45y"]
[ext_resource type="Texture2D" uid="uid://1l3dcsdymca7" path="res://assets/logo.png" id="4_d8b7k"]
[ext_resource type="PackedScene" uid="uid://rcyrv0xwolqb" path="res://scenes/options/ui_sounds.tscn" id="4_pbife"]
[ext_resource type="PackedScene" uid="uid://dtc25e8n7w72s" path="res://scenes/options/options.tscn" id="5_ayxb0"]
[ext_resource type="PackedScene" uid="uid://c7ojnoeagubf4" path="res://scenes/menu/tutorial.tscn" id="7_564ke"]

[sub_resource type="Gradient" id="Gradient_xj6xj"]
colors = PackedColorArray(0, 0, 0, 1, 0.12549, 0.211765, 0.443137, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7rple"]
gradient = SubResource("Gradient_xj6xj")
fill = 1
fill_to = Vector2(1.49, 0.315)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tmtn"]
shader = ExtResource("2_5r50l")
shader_parameter/speed = 0.1

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkxbs")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7rple")

[node name="Pattern" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_3tmtn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mh45y")
stretch_mode = 1

[node name="ui_sounds" parent="." instance=ExtResource("4_pbife")]
root_path = NodePath("..")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(456, 363)
scale = Vector2(7.27865, 6.36719)
texture = ExtResource("4_d8b7k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -171.0
offset_right = -129.0
offset_bottom = 193.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Options" parent="." instance=ExtResource("5_ayxb0")]
visible = false
layout_mode = 1

[node name="Tutorial_Page" parent="." instance=ExtResource("7_564ke")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
